--- a/styles/style.css
+++ b/styles/style.css
@@ -145,8 +145,9 @@ body {
     }
 
     .apresentacao__imagem{
-        width: auto;
+        width: 80%;
         height: auto;
         padding: 2% 10%;
+        box-sizing: border-box;
     }
 }
